# ditherer

./: CMakeLists.txt  README.md  dither.cpp  dither.h  generic.cpp  generic.h  main.cpp  totext.cpp  totext.h  totextmain.cpp
